--- a/homeassistant/components/mqtt/quality_scale.yaml
+++ b/homeassistant/components/mqtt/quality_scale.yaml
@@ -29,11 +29,7 @@ rules:
       MQTT broker, this happens during integration setup,
       and only one config entry is allowed.
   test-before-configure: done
-  test-before-setup:
-    status: exempt
-    comment: >
-      We choose to early exit the entry as it can take some time for the client 
-      to connect. Waiting for the client would increase the overall setup time.
+  test-before-setup: todo
   unique-config-entry: done
 
   # Silver
